# lifetime_income_planner

./: Cargo.toml  README.md
backend/: .env.example  .env.test  .gitignore  Cargo.toml
backend/migrations/2026-07-06-000001_create_users/: up.sql
backend/migrations/2026-07-06-000002_create_profiles/: up.sql
backend/migrations/2026-07-06-000003_create_accounts/: up.sql
backend/migrations/2026-07-06-000004_create_spending_items/: down.sql  up.sql
backend/migrations/2026-07-06-000005_create_income_sources/: down.sql  up.sql
backend/migrations/2026-07-06-000006_create_life_events/: down.sql  up.sql
backend/migrations/2026-07-06-000007_create_assumptions/: down.sql  up.sql
backend/migrations/2026-07-07-000008_create_plans/: down.sql  up.sql
backend/migrations/2026-07-07-000009_create_tax_tables/: down.sql  up.sql
backend/migrations/2026-07-07-000010_state_tax_brackets/: down.sql  up.sql
backend/migrations/2026-07-07-000011_roth_conversion_assumptions/: down.sql  up.sql
backend/migrations/2026-07-07-000012_create_aca_tables/: down.sql  up.sql
backend/migrations/2026-07-07-000013_withdrawal_strategy/: down.sql  up.sql
backend/migrations/2026-07-08-000014_medicare_part_b_premium/: down.sql  up.sql
backend/migrations/2026-07-08-000015_create_irmaa_tables/: down.sql  up.sql
backend/migrations/2026-07-09-034412_scenario_cloning/: down.sql  up.sql
backend/src/: aca.rs  auth.rs  config.rs  db.rs  error.rs  insights.rs  irmaa.rs  main.rs  monte_carlo.rs  openapi.rs  plaid_client.rs  projection.rs  reconciliation.rs  schema.rs  tax.rs
e2e/: .gitignore  (+7 more)
(+140 files in other folders)
