[package]
name = "lifetime_income_planner"
version = "0.1.0"
edition = "2021"
description = "Backend API for the Lifetime Income Planner retirement platform"

[dependencies]
actix-web = "4"
actix-cors = "0.7"

# Database
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization / validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }

# OpenAPI docs
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "2"

[dev-dependencies]
actix-rt = "2"
